<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MovieMatch</string>
    <string name="e_mail" tools:ignore="MissingTranslation">E-mail</string>
    <string name="mot_de_passe" tools:ignore="MissingTranslation">Mot de Passe</string>
    <string name="se_connecter" tools:ignore="MissingTranslation">Veuillez rentrer vos identifiants </string>
    <string name="login" tools:ignore="MissingTranslation">Se connecter</string>
    <string name="register" tools:ignore="MissingTranslation">Enregistre toi !</string>
    <string name="Bienvenue" tools:ignore="MissingTranslation">Rejoins nous et profite des avantages de la création de compte.</string>
    <string name="name" tools:ignore="MissingTranslation">Name</string>
    <string name="reecrire_mdp" tools:ignore="MissingTranslation">Confirmation du mot de passe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>